@@ -1,6 +1,7 @@
 package com.pankaj.crypto.symmetric;
 
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 import javax.crypto.SecretKey;
 
 import org.junit.jupiter.api.Test;
@@ -22,14 +23,15 @@ class SymmetricEncryptionUtilsTest {
     @Test
     void testAESCryptoRoutine() throws Exception{
         SecretKey secretKey = SymmetricEncryptionUtils.generateAESKey();
-        byte[] iv = SymmetricEncryptionUtils.createInitializationVector();
         String plainText = "This is the text we are going to hide in plain sight";
-        byte[] cipherText = SymmetricEncryptionUtils.performAESEncryption(plainText, secretKey, iv);
+        String cipherText = SymmetricEncryptionUtils.performAESEncryption(plainText, secretKey);
         assertNotNull(cipherText);
-        System.out.println(DatatypeConverter.printHexBinary(cipherText));
+        System.out.println(cipherText);
+        String[] parts = cipherText.split(":");
+        byte[] iv = Base64.getDecoder().decode(parts[0]);
+        byte[] encrypted = Base64.getDecoder().decode(parts[1]);
 
-        String decryptedText = SymmetricEncryptionUtils.performAESDecryption(cipherText, secretKey, iv);
-
+        String decryptedText = SymmetricEncryptionUtils.performAESDecryption(cipherText, secretKey);
         assertEquals(plainText, decryptedText);
 
         //If you get an error invalid key size it means jdk doesn't have the "unlimited strength"
